<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameHistoryActivity">

    <ImageView
        android:id="@+id/ivChessboard"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvGames"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#cccccc"
        android:longClickable="false"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.751"
        tools:itemCount="1" />

    <TextView
        android:id="@+id/tvSelectedGame"
        android:layout_width="390dp"
        android:layout_height="55dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="75dp"
        android:fontFamily="monospace"
        android:padding="4dp"
        android:text=""
        android:textAlignment="textStart"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/tvLastMove"
        android:layout_width="390dp"
        android:layout_height="25dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="60dp"
        android:fontFamily="monospace"
        android:padding="4dp"
        android:text=""
        android:textAlignment="textStart"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/btPrevMove"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="5dp"
        android:text="@string/previous"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/btNextMove"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_marginStart="110dp"
        android:layout_marginBottom="5dp"
        android:text="@string/next"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/btNewGame"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_marginStart="210dp"
        android:layout_marginBottom="5dp"
        android:text="@string/new_game"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/btDelete"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_marginStart="310dp"
        android:layout_marginBottom="5dp"
        android:text="@string/delete"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>